--- a/templates/.gitignore
+++ b/templates/.gitignore
@@ -1,15 +1,36 @@
-# venv / cache
+# Python
+__pycache__/
+*.py[cod]
+*.pyd
+
+# Entornos
 .venv/
 venv/
-__pycache__/
-*.pyc
+env/
+pip-wheel-metadata/
 
-# entorno
+# Tests/cobertura/tipos
+.pytest_cache/
+.mypy_cache/
+.coverage*
+htmlcov/
+
+# Variables de entorno
 .env
 .env.*
+*.env
 
-# sqlite local
+# Datos locales (Flask instance + SQLite)
+instance/*
+!instance/.gitkeep
 *.db
+*.sqlite3
 
-# VS Code
+# Editores / SO
 .vscode/
+.idea/
+.DS_Store
+Thumbs.db
+
+# Logs
+*.log
